Added modules for tests accessibility