@@ -41,6 +41,9 @@
         <version>3.0.0-M3</version> <!-- {x-version-update;org.apache.maven.plugins:maven-surefire-plugin;external_dependency} -->
         <configuration>
           <rerunFailingTestsCount>3</rerunFailingTestsCount>
+          <argLine>
+            --add-opens com.azure.security.keyvault.keys/com.azure.security.keyvault.keys.cryptography=ALL-UNNAMED
+          </argLine>
         </configuration>
       </plugin>
     </plugins>
